# cd0046-SQL-and-Data-Modeling-for-the-Web

./: .gitignore  2.0.0  CHANGELOG.md  README.md  app.py  config.py  constants.py  enums.py  fabfile.py  forms.py  model.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  temp_rem.txt  text  util.py  validate.py
.github/workflows/: manual.yml
migrations/: env.py
migrations/versions/: 0a61a79042d2_.py  10a60034d3c2_.py  18af534ced2b_.py  1bbea24fd315_.py  1d10f03eb668_.py  1f44e1aa01d2_.py  25e3e21ba3c3_.py  26a3d32f46ef_.py  2e507e2be329_.py  40c748a7a011_.py  443d5d613635_.py  4fcfb5d78543_.py  62a9129e14da_.py  65e6d35ae94d_.py  772c612ddfd6_.py  840d7ce86794_.py  86c0ce27f57b_.py  9e655d39b4dc_.py  b7e9b59972e5_.py  c2f3038a9e4f_.py  c92d875daa4b_.py  cc131a01804a_.py  d309068c7c8b_.py  d3698f41c810_.py  d3ead5505489_.py  d71728e5bf0c_.py  e1291f27b8a9_init.py  e6fd7de377f9_.py  e7618eb79011_.py  fe0f05d91a56_.py
starter_code/: requirements.txt
static/css/: bootstrap-theme.css  bootstrap-theme.min.css  bootstrap.css  bootstrap.min.css  bootstrap.min.js  layout.forms.css  layout.main.css  main.css  main.quickfix.css  main.responsive.css
static/js/: plugins.js  script.js
static/js/libs/: bootstrap-3.1.1.min.js  jquery-1.11.1.min.js  (+2 more)
templates/errors/: 404.html  500.html
templates/forms/: edit_artist.html  edit_venue.html  new_artist.html  new_show.html  new_venue.html
templates/layouts/: form.html  main.html
templates/pages/: home.css  home.html  show.html  show_artist.html  show_venue.html  venues.html
