[tool.poetry]
name = "udacity-fullstack-orm-project"
version = "0.1.0"
description = ""
authors = ["Tzu-Fan Tang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.3"
sqlalchemy = "^2.0.20"
flask-sqlalchemy = "^3.0.5"
flask-migrate = "^4.0.4"
babel = "^2.12.1"
flask-moment = "^1.0.5"
flask-wtf = "^1.1.1"
psycopg2-binary = "^2.9.7"
python-dateutil = "^2.8.2"
pytz = "^2023.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
